// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component .conditionalRender should render FooterWorkoutControls 1`] = `
<FooterWorkoutControls
  blocked={false}
  currentResults={
    Array [
      true,
      true,
      true,
      true,
      true,
    ]
  }
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  nextExercise={
    Object {
      "exerciseKey": "thisIsTheUniqueKey",
    }
  }
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={true}
/>
`;

exports[`Footer component .conditionalRender should render FooterWorkoutStart 1`] = `
<withHandlers(_FooterWorkoutStart)
  blocked={false}
  currentResults={
    Array [
      true,
      true,
      true,
      true,
      true,
    ]
  }
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  nextExercise={
    Object {
      "exerciseKey": "thisIsTheUniqueKey",
    }
  }
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={false}
/>
`;

exports[`Footer component .conditionalRender should render null 1`] = `null`;

exports[`Footer component in training status matches the previous snapshot 1`] = `
.css-1eaczue,
[data-css-1eaczue] {
  position: absolute;
  bottom: 0px;
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  font-family: sans-serif;
  background: -webkit-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: -moz-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  padding: 15px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-8pmgdu,
[data-css-8pmgdu] {
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-size: 20px;
  line-height: 24px;
  font-weight: 500;
  text-align: center;
  color: #46B4E3;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  height: 40px;
  justify-content: center;
  align-items: stretch;
  border: none;
  background: none;
  overflow: hidden;
  text-decoration: none;
  transition: all 300ms;
  outline: none;
  padding: 0px;
  letter-spacing: 1px;
  background-color: transparent;
  margin: 0 10px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-transition: all 300ms;
  -moz-transition: all 300ms;
}

<Footer
  blocked={false}
  currentResults={
    Array [
      true,
      true,
      true,
      true,
      true,
    ]
  }
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  nextExercise={
    Object {
      "exerciseKey": "thisIsTheUniqueKey",
    }
  }
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={true}
>
  <glamorous(footer)>
    <footer
      className="css-1eaczue"
    >
      <FooterWorkoutControls
        blocked={false}
        currentResults={
          Array [
            true,
            true,
            true,
            true,
            true,
          ]
        }
        fireCompleteExercise={[Function]}
        fireStartWorkout={[Function]}
        hidden={false}
        key="control-btns"
        loadDefaults={[Function]}
        nextExercise={
          Object {
            "exerciseKey": "thisIsTheUniqueKey",
          }
        }
        onSetDone={[Function]}
        onSetFailed={[Function]}
        shouldEndExercise={false}
        training={true}
      >
        <Aux>
          <glamorous(Button)
            data-test="failButton"
            disabled={false}
            onClickAction={[Function]}
          >
            <Button
              className="css-8pmgdu"
              data-test="failButton"
              disabled={false}
              onClickAction={[Function]}
            >
              <button
                className="css-8pmgdu"
                data-test="failButton"
                disabled={false}
                onClick={[Function]}
              >
                Failed
              </button>
            </Button>
          </glamorous(Button)>
          <glamorous(Button)
            data-test="doneButton"
            disabled={false}
            onClickAction={[Function]}
          >
            <Button
              className="css-8pmgdu"
              data-test="doneButton"
              disabled={false}
              onClickAction={[Function]}
            >
              <button
                className="css-8pmgdu"
                data-test="doneButton"
                disabled={false}
                onClick={[Function]}
              >
                Done
              </button>
            </Button>
          </glamorous(Button)>
        </Aux>
      </FooterWorkoutControls>
    </footer>
  </glamorous(footer)>
</Footer>
`;

exports[`Footer component snapshot blocked matches the previous snapshot 1`] = `
.css-1eaczue,
[data-css-1eaczue] {
  position: absolute;
  bottom: 0px;
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  font-family: sans-serif;
  background: -webkit-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: -moz-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  padding: 15px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-8pmgdu,
[data-css-8pmgdu] {
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-size: 20px;
  line-height: 24px;
  font-weight: 500;
  text-align: center;
  color: #46B4E3;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  height: 40px;
  justify-content: center;
  align-items: stretch;
  border: none;
  background: none;
  overflow: hidden;
  text-decoration: none;
  transition: all 300ms;
  outline: none;
  padding: 0px;
  letter-spacing: 1px;
  background-color: transparent;
  margin: 0 10px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-transition: all 300ms;
  -moz-transition: all 300ms;
}

<Footer
  blocked={true}
  currentResults={
    Array [
      true,
      true,
      true,
      true,
      true,
    ]
  }
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  nextExercise={
    Object {
      "exerciseKey": "thisIsTheUniqueKey",
    }
  }
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={false}
>
  <glamorous(footer)>
    <footer
      className="css-1eaczue"
    >
      <withHandlers(_FooterWorkoutStart)
        blocked={true}
        currentResults={
          Array [
            true,
            true,
            true,
            true,
            true,
          ]
        }
        fireCompleteExercise={[Function]}
        fireStartWorkout={[Function]}
        hidden={false}
        key="start-btn"
        loadDefaults={[Function]}
        nextExercise={
          Object {
            "exerciseKey": "thisIsTheUniqueKey",
          }
        }
        onSetDone={[Function]}
        onSetFailed={[Function]}
        shouldEndExercise={false}
        training={false}
      >
        <_FooterWorkoutStart
          blocked={true}
          currentResults={
            Array [
              true,
              true,
              true,
              true,
              true,
            ]
          }
          fireCompleteExercise={[Function]}
          fireStartWorkout={[Function]}
          hidden={false}
          loadDefaults={[Function]}
          nextExercise={
            Object {
              "exerciseKey": "thisIsTheUniqueKey",
            }
          }
          onSetDone={[Function]}
          onSetFailed={[Function]}
          shouldEndExercise={false}
          startButtonHandler={[Function]}
          training={false}
        >
          <glamorous(Button)
            data-test="startButton"
            disabled={true}
            onClickAction={[Function]}
          >
            <Button
              className="css-8pmgdu"
              data-test="startButton"
              disabled={true}
              onClickAction={[Function]}
            >
              <button
                className="css-8pmgdu"
                data-test="startButton"
                disabled={true}
                onClick={[Function]}
              >
                Starting ...
              </button>
            </Button>
          </glamorous(Button)>
        </_FooterWorkoutStart>
      </withHandlers(_FooterWorkoutStart)>
    </footer>
  </glamorous(footer)>
</Footer>
`;

exports[`Footer component snapshot not blocked matches the mounted snapshot 1`] = `
.css-1eaczue,
[data-css-1eaczue] {
  position: absolute;
  bottom: 0px;
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  font-family: sans-serif;
  background: -webkit-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: -moz-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  padding: 15px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-8pmgdu,
[data-css-8pmgdu] {
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-size: 20px;
  line-height: 24px;
  font-weight: 500;
  text-align: center;
  color: #46B4E3;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  height: 40px;
  justify-content: center;
  align-items: stretch;
  border: none;
  background: none;
  overflow: hidden;
  text-decoration: none;
  transition: all 300ms;
  outline: none;
  padding: 0px;
  letter-spacing: 1px;
  background-color: transparent;
  margin: 0 10px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-transition: all 300ms;
  -moz-transition: all 300ms;
}

<Footer
  blocked={false}
  currentResults={
    Array [
      true,
      true,
      true,
      true,
      true,
    ]
  }
  fireCompleteExercise={[Function]}
  fireStartWorkout={[Function]}
  hidden={false}
  loadDefaults={[Function]}
  nextExercise={
    Object {
      "exerciseKey": "thisIsTheUniqueKey",
    }
  }
  onSetDone={[Function]}
  onSetFailed={[Function]}
  shouldEndExercise={false}
  training={false}
>
  <glamorous(footer)>
    <footer
      className="css-1eaczue"
    >
      <withHandlers(_FooterWorkoutStart)
        blocked={false}
        currentResults={
          Array [
            true,
            true,
            true,
            true,
            true,
          ]
        }
        fireCompleteExercise={[Function]}
        fireStartWorkout={[Function]}
        hidden={false}
        key="start-btn"
        loadDefaults={[Function]}
        nextExercise={
          Object {
            "exerciseKey": "thisIsTheUniqueKey",
          }
        }
        onSetDone={[Function]}
        onSetFailed={[Function]}
        shouldEndExercise={false}
        training={false}
      >
        <_FooterWorkoutStart
          blocked={false}
          currentResults={
            Array [
              true,
              true,
              true,
              true,
              true,
            ]
          }
          fireCompleteExercise={[Function]}
          fireStartWorkout={[Function]}
          hidden={false}
          loadDefaults={[Function]}
          nextExercise={
            Object {
              "exerciseKey": "thisIsTheUniqueKey",
            }
          }
          onSetDone={[Function]}
          onSetFailed={[Function]}
          shouldEndExercise={false}
          startButtonHandler={[Function]}
          training={false}
        >
          <glamorous(Button)
            data-test="startButton"
            disabled={false}
            onClickAction={[Function]}
          >
            <Button
              className="css-8pmgdu"
              data-test="startButton"
              disabled={false}
              onClickAction={[Function]}
            >
              <button
                className="css-8pmgdu"
                data-test="startButton"
                disabled={false}
                onClick={[Function]}
              >
                Start Workout
              </button>
            </Button>
          </glamorous(Button)>
        </_FooterWorkoutStart>
      </withHandlers(_FooterWorkoutStart)>
    </footer>
  </glamorous(footer)>
</Footer>
`;

exports[`Footer component snapshot not blocked matches the rendered snapshot 1`] = `
.css-1eaczue,
[data-css-1eaczue] {
  position: absolute;
  bottom: 0px;
  width: 100%;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  font-family: sans-serif;
  background: -webkit-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: -moz-linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  background: linear-gradient(-180deg, #ECF7FE 0%, #FFFFFF 38%);
  padding: 15px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-8pmgdu,
[data-css-8pmgdu] {
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  font-size: 20px;
  line-height: 24px;
  font-weight: 500;
  text-align: center;
  color: #46B4E3;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  height: 40px;
  justify-content: center;
  align-items: stretch;
  border: none;
  background: none;
  overflow: hidden;
  text-decoration: none;
  transition: all 300ms;
  outline: none;
  padding: 0px;
  letter-spacing: 1px;
  background-color: transparent;
  margin: 0 10px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-transition: all 300ms;
  -moz-transition: all 300ms;
}

<footer
  class="css-1eaczue"
>
  <button
    class="css-8pmgdu"
    data-test="startButton"
  >
    Start Workout
  </button>
</footer>
`;
